--- a/meta-firefox/conf/layer.conf
+++ b/meta-firefox/conf/layer.conf
@@ -105,6 +105,6 @@ BBFILE_PATTERN_firefox-browser-layer := "^${LAYERDIR}/"
 BBFILE_PRIORITY_firefox-browser-layer = "7"
 
 LAYERVERSION_firefox-browser-layer = "2"
-LAYERSERIES_COMPAT_firefox-browser-layer = "mickledore nanbield"
+LAYERSERIES_COMPAT_firefox-browser-layer = "kirkstone mickledore nanbield"
 
 LAYERDEPENDS_firefox-browser-layer = "clang-layer core openembedded-layer"
