--- a/.github/workflows/scarthgap-aarch64-v127.0.1.yml
+++ b/.github/workflows/scarthgap-aarch64-v127.0.1.yml
@@ -41,6 +41,7 @@ jobs:
                   firefox-l10n-gn           firefox-l10n-lv     firefox-l10n-sl     firefox-l10n-el     firefox-l10n-gu-in \
                   firefox-l10n-mk           firefox-l10n-son    firefox-l10n-en-ca  firefox-l10n-he     firefox-l10n-mr \
                   firefox-l10n-sq"
+         kas shell ./meta-browser/meta-firefox/kas/scarthgap-latest-aarch64-test.yml -c "bitbake -c clean rust rust-native cargo cargo-native libstd-rs"
          kas build ./meta-browser/meta-firefox/kas/scarthgap-latest-aarch64-test.yml
          if [ ! -e ~/test-images/scarthgap-aarch64-latest.wic.bz2 ]; then
            mv build/tmp/deploy/images/raspberrypi3-64/firefox-test-image-raspberrypi3-64.rootfs-*.wic.bz2 ~/test-images/scarthgap-aarch64-latest.wic.bz2
