--- a/.github/workflows/scarthgap-riscv-v115.12.0esr.yml
+++ b/.github/workflows/scarthgap-riscv-v115.12.0esr.yml
@@ -41,6 +41,7 @@ jobs:
                   firefox-l10n-gn           firefox-l10n-lv     firefox-l10n-sl     firefox-l10n-el     firefox-l10n-gu-in \
                   firefox-l10n-mk           firefox-l10n-son    firefox-l10n-en-ca  firefox-l10n-he     firefox-l10n-mr \
                   firefox-l10n-sq"
+         kas shell ./meta-browser/meta-firefox/kas/scarthgap-esr-riscv-test.yml -c "bitbake -c clean rust rust-native cargo cargo-native libstd-rs"
          kas build ./meta-browser/meta-firefox/kas/scarthgap-esr-riscv-test.yml
          if [ ! -e ~/test-images/scarthgap-riscv-esr.wic.gz ]; then
            mv build/tmp/deploy/images/star64/firefox-test-image-star64.rootfs-*.wic.gz ~/test-images/scarthgap-riscv-esr.wic.gz
