--- a/.github/workflows/styhead-x86_64-v115.12.0esr.yml
+++ b/.github/workflows/styhead-x86_64-v115.12.0esr.yml
@@ -1,5 +1,5 @@
-name: scarthgap-arm-127.0.1
-run-name: Build latest Firefox for 32-bit ARM architecture with Scarthgap
+name: styhead-x86_64-115.12.0
+run-name: Build ESR Firefox for x86_64 architecture with Styhead
 on:
   pull_request:
     branches:
@@ -8,18 +8,18 @@ on:
       - 'meta-firefox/**'
 
 jobs:
-  build-scarthgap-arm-latest:
+  build-styhead-x86_64-esr:
     runs-on: [self-hosted]
     environment: ff-build-env
     steps:
       - uses: actions/checkout@v4
         with:
-          path: workspace/scarthgap/meta-browser
+          path: workspace/styhead/meta-browser
           ref: ${{ github.ref }}
       - run: |
-         cd workspace/scarthgap
-         kas checkout --update ./meta-browser/meta-firefox/kas/scarthgap-latest-arm-test.yml
-         kas shell ./meta-browser/meta-firefox/kas/scarthgap-latest-arm-test.yml -c "bitbake -c clean firefox firefox-test-image \
+         cd workspace/styhead
+         kas checkout --update ./meta-browser/meta-firefox/kas/styhead-esr-x86_64-test.yml
+         kas shell ./meta-browser/meta-firefox/kas/styhead-esr-x86_64-test.yml -c "bitbake -c clean firefox firefox-test-image \
                   firefox-l10n-ach          firefox-l10n-en-gb  firefox-l10n-hi-in  firefox-l10n-ms     firefox-l10n-sr \
                   firefox-l10n-af           firefox-l10n-en-us  firefox-l10n-hr     firefox-l10n-my     firefox-l10n-sv-se \
                   firefox-l10n-an           firefox-l10n-eo     firefox-l10n-hsb    firefox-l10n-nb-no  firefox-l10n-szl \
@@ -41,9 +41,7 @@ jobs:
                   firefox-l10n-gn           firefox-l10n-lv     firefox-l10n-sl     firefox-l10n-el     firefox-l10n-gu-in \
                   firefox-l10n-mk           firefox-l10n-son    firefox-l10n-en-ca  firefox-l10n-he     firefox-l10n-mr \
                   firefox-l10n-sq"
-         kas shell ./meta-browser/meta-firefox/kas/scarthgap-latest-arm-test.yml -c "bitbake -c clean rust rust-native cargo cargo-native libstd-rs"
-         kas build ./meta-browser/meta-firefox/kas/scarthgap-latest-arm-test.yml
-         if [ ! -e ~/test-images/scarthgap-arm-latest.wic.bz2 ]; then
-           mv build/tmp/deploy/images/raspberrypi3/firefox-test-image-raspberrypi3.rootfs-*.wic.bz2 ~/test-images/scarthgap-arm-latest.wic.bz2
-           mv build/tmp/deploy/images/raspberrypi3/firefox-test-image-raspberrypi3.rootfs-*.wic.bmap ~/test-images/scarthgap-arm-latest.wic.bmap
-         fi
+         kas shell ./meta-browser/meta-firefox/kas/styhead-esr-x86_64-test.yml -c "bitbake -c clean rust rust-native cargo cargo-native libstd-rs"
+         kas build ./meta-browser/meta-firefox/kas/styhead-esr-x86_64-test.yml
+         rm -rf build/tmp/deploy/images/esr
+         cp -r build/tmp/deploy/images/qemux86-64 build/tmp/deploy/images/esr
