--- a/meta-firefox/kas/repos/scarthgap.yml
+++ b/meta-firefox/kas/repos/scarthgap.yml
@@ -5,8 +5,8 @@ header:
 
 repos:
   meta-oe:
-    refspec: scarthgap
+    refspec: "18f939a5fb37528a5415b05077ece383c346a119"
   poky:
-    refspec: scarthgap
+    refspec: "a099b484c5b245a335a5ec9b293638e1362383ae"
   meta-clang:
     refspec: "989ff6a4e7db59f01d511727135610006124ead2"
