firefox: fix `buildpath` qa errors in Styhead

--- a/meta-firefox/kas/repos/styhead.yml
+++ b/meta-firefox/kas/repos/styhead.yml
@@ -3,10 +3,15 @@ header:
   includes:
     - meta-firefox/kas/repos/common-repos.yml
 
+# poky is pinned to a commit, for now:
+# this is the last commit with binutils 2.42
+# The next commit bumps binutils, and ffmpeg fails to
+# compile with it.
+
 repos:
   meta-oe:
     refspec: master
   poky:
-    refspec: master
+    refspec: "a1c5e16c62f26401be8f5c0673efebfa18ed5abd"
   meta-clang:
     refspec: "49b031747859cc20238c07628f1b550fcf759de9"
