--- a/.github/workflows/scarthgap-arm-v128.5.1esr.yml
+++ b/.github/workflows/scarthgap-arm-v128.5.1esr.yml
@@ -9,18 +9,22 @@ on:
 
 jobs:
   build-scarthgap-arm-esr:
-    runs-on: [self-hosted, acer]
+    runs-on: [self-hosted, desktop]
+    container:
+      image: skandigraun/yocto:latest
+      volumes:
+        - yocto:/yocto
     environment: ff-build-env
     steps:
-      - uses: actions/checkout@v4
-        with:
-          path: workspace/scarthgap/meta-browser
-          ref: ${{ github.ref }}
       - run: |
-         if [ -e ~/test-images/scarthgap-arm-esr.wic.bz2 ]; then
+         if [ -e /yocto/test-images/scarthgap-arm-esr.wic.bz2 ]; then
            exit 0
          fi
-         cd workspace/scarthgap
+         mkdir -p /yocto/scarthgap
+         cd /yocto/scarthgap
+         rm -rf meta-browser
+         git clone $GITHUB_SERVER_URL/$GITHUB_REPOSITORY
+         git -C meta-browser checkout $GITHUB_HEAD_REF
          kas checkout --update ./meta-browser/meta-firefox/kas/scarthgap-esr-arm-test.yml
          kas shell ./meta-browser/meta-firefox/kas/scarthgap-esr-arm-test.yml -c "bitbake -c clean firefox firefox-test-image \
                   firefox-l10n-ach          firefox-l10n-en-gb  firefox-l10n-hi-in  firefox-l10n-ms     firefox-l10n-sr \
@@ -46,7 +50,5 @@ jobs:
                   firefox-l10n-sq"
          kas shell ./meta-browser/meta-firefox/kas/scarthgap-esr-arm-test.yml -c "bitbake -c clean rust-native cargo cargo-native libstd-rs rust-llvm-native"
          kas build ./meta-browser/meta-firefox/kas/scarthgap-esr-arm-test.yml
-         if [ ! -e ~/test-images/scarthgap-arm-esr.wic.bz2 ]; then
-           mv build/tmp/deploy/images/raspberrypi3/firefox-test-image-raspberrypi3.rootfs-*.wic.bz2 ~/test-images/scarthgap-arm-esr.wic.bz2
-           mv build/tmp/deploy/images/raspberrypi3/firefox-test-image-raspberrypi3.rootfs-*.wic.bmap ~/test-images/scarthgap-arm-esr.wic.bmap
-         fi
+         mv build/tmp/deploy/images/raspberrypi3/firefox-test-image-raspberrypi3.rootfs-*.wic.bz2 /yocto/test-images/scarthgap-arm-esr.wic.bz2
+         mv build/tmp/deploy/images/raspberrypi3/firefox-test-image-raspberrypi3.rootfs-*.wic.bmap /yocto/test-images/scarthgap-arm-esr.wic.bmap
