--- a/.github/workflows/styhead-x86_64-v128.5.1esr.yml
+++ b/.github/workflows/styhead-x86_64-v128.5.1esr.yml
@@ -10,14 +10,21 @@ on:
 jobs:
   build-styhead-x86_64-esr:
     runs-on: [self-hosted, desktop]
+    container:
+      image: skandigraun/yocto:latest
+      volumes:
+        - yocto:/yocto
     environment: ff-build-env
     steps:
-      - uses: actions/checkout@v4
-        with:
-          path: workspace/styhead/meta-browser
-          ref: ${{ github.ref }}
       - run: |
-         cd workspace/styhead
+         if [ -d /yocto/test-images/styhead-esr-x86 ]; then
+           exit 0
+         fi
+         mkdir -p /yocto/styhead  
+         cd /yocto/styhead  
+         rm -rf meta-browser
+         git clone $GITHUB_SERVER_URL/$GITHUB_REPOSITORY
+         git -C meta-browser checkout $GITHUB_HEAD_REF
          kas checkout --update ./meta-browser/meta-firefox/kas/styhead-esr-x86_64-test.yml
          kas shell ./meta-browser/meta-firefox/kas/styhead-esr-x86_64-test.yml -c "bitbake -c clean firefox firefox-test-image \
                   firefox-l10n-ach          firefox-l10n-en-gb  firefox-l10n-hi-in  firefox-l10n-ms     firefox-l10n-sr \
@@ -43,4 +50,4 @@ jobs:
                   firefox-l10n-sq"
          kas build ./meta-browser/meta-firefox/kas/styhead-esr-x86_64-test.yml
          rm -rf build/tmp/deploy/images/esr
-         cp -r build/tmp/deploy/images/qemux86-64 build/tmp/deploy/images/esr
+         cp -r build/tmp/deploy/images/qemux86-64 /yocto/test-images/styhead-esr-x86
