--- a/.github/workflows/walnascar-arm-v133.0.yml
+++ b/.github/workflows/walnascar-arm-v133.0.yml
@@ -11,16 +11,20 @@ jobs:
   build-walnascar-arm-latest:
     runs-on: [self-hosted, desktop]
     environment: ff-build-env
+    container:
+      image: skandigraun/yocto:latest
+      volumes:
+        - yocto:/yocto
     steps:
-      - uses: actions/checkout@v4
-        with:
-          path: workspace/walnascar/meta-browser
-          ref: ${{ github.ref }}
       - run: |
-         if [ -e ~/test-images/walnascar-arm-latest.wic.bz2 ]; then
+         if [ -e /yocto/test-images/walnascar-arm-latest.wic.bz2 ]; then
            exit 0
          fi
-         cd workspace/walnascar
+         mkdir -p /yocto/walnascar
+         cd /yocto/walnascar
+         rm -rf meta-browser
+         git clone $GITHUB_SERVER_URL/$GITHUB_REPOSITORY
+         git -C meta-browser checkout $GITHUB_HEAD_REF
          kas checkout --update ./meta-browser/meta-firefox/kas/walnascar-latest-arm-test.yml
          kas shell ./meta-browser/meta-firefox/kas/walnascar-latest-arm-test.yml -c "bitbake -c clean firefox firefox-test-image \
                   firefox-l10n-ach          firefox-l10n-en-gb  firefox-l10n-hi-in  firefox-l10n-ms     firefox-l10n-sr \
@@ -45,5 +49,5 @@ jobs:
                   firefox-l10n-mk           firefox-l10n-son    firefox-l10n-en-ca  firefox-l10n-he     firefox-l10n-mr \
                   firefox-l10n-sq"
          kas build ./meta-browser/meta-firefox/kas/walnascar-latest-arm-test.yml
-         mv build/tmp/deploy/images/raspberrypi3/firefox-test-image-raspberrypi3.rootfs-*.wic.bz2 ~/test-images/walnascar-arm-latest.wic.bz2
-         mv build/tmp/deploy/images/raspberrypi3/firefox-test-image-raspberrypi3.rootfs-*.wic.bmap ~/test-images/walnascar-arm-latest.wic.bmap
+         mv build/tmp/deploy/images/raspberrypi3/firefox-test-image-raspberrypi3.rootfs-*.wic.bz2 /yocto/test-images/walnascar-arm-latest.wic.bz2
+         mv build/tmp/deploy/images/raspberrypi3/firefox-test-image-raspberrypi3.rootfs-*.wic.bmap /yocto/test-images/walnascar-arm-latest.wic.bmap
