Use Rust from lts-mixins for Scarthgap
Now that there is an updated Rust version for Scarthgap in the
meta-lts-mixins repository, the previously vendored Rust recipe is
not required anymore.

--- a/meta-firefox/conf/layer.conf
+++ b/meta-firefox/conf/layer.conf
@@ -118,3 +118,10 @@ LAYERVERSION_firefox-browser-layer = "2"
 LAYERSERIES_COMPAT_firefox-browser-layer = "kirkstone scarthgap styhead walnascar"
 
 LAYERDEPENDS_firefox-browser-layer = "clang-layer core openembedded-layer"
+
+# Don't enforce the Rust layer dependency for now, as there are multiple
+# actively maintained Rust-providing layers (e.g. Kirkstone has at least 2:
+# meta-rust and meta-lts-mixins).
+
+# LAYERDEPENDS_firefox-browser-layer:append = '${@" rust-layer " if "kirkstone" in d.getVar("LAYERSERIES_CORENAMES") else ""}'
+# LAYERDEPENDS_firefox-browser-layer:append = '${@" scarthgap-rust-mixin " if "scarthgap" in d.getVar("LAYERSERIES_CORENAMES") else ""}'
