--- a/meta-firefox/kas/repos/scarthgap.yml
+++ b/meta-firefox/kas/repos/scarthgap.yml
@@ -2,6 +2,7 @@ header:
   version: 11
   includes:
     - meta-firefox/kas/repos/common-repos.yml
+    - meta-firefox/kas/repos/lts-mixins.yml
 
 repos:
   meta-oe:
@@ -14,3 +15,10 @@ repos:
         path: meta-firefox/kas/scarthgap-poky-patches
   meta-clang:
     refspec: "989ff6a4e7db59f01d511727135610006124ead2"
+  meta-lts-mixins:
+    refspec: "a5fc9344ebd80d36326bde082aea33f0c7873291"
+
+
+local_conf_header:
+  scarthgap: |
+    BBMASK += "poky/meta/recipes-devtools/rust"
