firefox: move build related config to separete repository
Move test and build related configs to a separate layer/repo (meta-firefox-test)

It started to pollute this layer, and although it is important,
the test and build related recipes and their settings started to
become too opinionated for this layer, and they also started to
overflow to other recipes.

Keep them separate, so they won't break other things accidentally.

--- a/.github/workflows/walnascar-riscv-v134.0.2.yml
+++ b/.github/workflows/walnascar-riscv-v134.0.2.yml
@@ -7,6 +7,11 @@ on:
     paths:
       - 'meta-firefox/**'
 
+permissions:
+  contents: read
+  actions: read
+  checks: write
+
 jobs:
   build-walnascar-riscv-latest:
     runs-on: [self-hosted, desktop]
@@ -17,37 +22,25 @@ jobs:
     environment: ff-build-env
     steps:
       - run: |
-         if [ -e /yocto/test-images/walnascar-riscv-latest.wic.gz ]; then
-           exit 0
-         fi
          mkdir -p /yocto/walnascar
          cd /yocto/walnascar
-         rm -rf meta-browser
+         rm -rf meta-browser meta-firefox-test
          git clone $GITHUB_SERVER_URL/$GITHUB_REPOSITORY
          git -C meta-browser checkout $GITHUB_HEAD_REF
-         kas checkout --update ./meta-browser/meta-firefox/kas/walnascar-latest-riscv-test.yml
-         kas shell ./meta-browser/meta-firefox/kas/walnascar-latest-riscv-test.yml -c "bitbake -c clean firefox firefox-test-image \
-                  firefox-l10n-ach          firefox-l10n-en-gb  firefox-l10n-hi-in  firefox-l10n-ms     firefox-l10n-sr \
-                  firefox-l10n-af           firefox-l10n-en-us  firefox-l10n-hr     firefox-l10n-my     firefox-l10n-sv-se \
-                  firefox-l10n-an           firefox-l10n-eo     firefox-l10n-hsb    firefox-l10n-nb-no  firefox-l10n-szl \
-                  firefox-l10n-ar           firefox-l10n-es-ar  firefox-l10n-hu     firefox-l10n-ne-np  firefox-l10n-ta \
-                  firefox-l10n-ast          firefox-l10n-es-cl  firefox-l10n-hy-am  firefox-l10n-nl     firefox-l10n-te \
-                  firefox-l10n-az           firefox-l10n-es-es  firefox-l10n-ia     firefox-l10n-nn-no  firefox-l10n-tg \
-                  firefox-l10n-be           firefox-l10n-es-mx  firefox-l10n-id     firefox-l10n-oc     firefox-l10n-th \
-                  firefox-l10n-bg           firefox-l10n-et     firefox-l10n-is     firefox-l10n-pa-in  firefox-l10n-tl \
-                  firefox-l10n-bn           firefox-l10n-eu     firefox-l10n-it     firefox-l10n-pl     firefox-l10n-tr \
-                  firefox-l10n-br           firefox-l10n-fa     firefox-l10n-ja     firefox-l10n-pt-br  firefox-l10n-trs \
-                  firefox-l10n-bs           firefox-l10n-ff     firefox-l10n-ka     firefox-l10n-pt-pt  firefox-l10n-uk \
-                  firefox-l10n-ca           firefox-l10n-fi     firefox-l10n-kab    firefox-l10n-rm     firefox-l10n-ur \
-                  firefox-l10n-cak          firefox-l10n-fr     firefox-l10n-kk     firefox-l10n-ro     firefox-l10n-uz \
-                  firefox-l10n-ca-valencia  firefox-l10n-fur    firefox-l10n-km     firefox-l10n-ru     firefox-l10n-vi \
-                  firefox-l10n-cs           firefox-l10n-fy-nl  firefox-l10n-kn     firefox-l10n-sc     firefox-l10n-xh \
-                  firefox-l10n-cy           firefox-l10n-ga-ie  firefox-l10n-ko     firefox-l10n-sco    firefox-l10n-zh-cn \
-                  firefox-l10n-da           firefox-l10n-gd     firefox-l10n-lij    firefox-l10n-si     firefox-l10n-zh-tw \
-                  firefox-l10n-de           firefox-l10n-gl     firefox-l10n-lt     firefox-l10n-sk     firefox-l10n-dsb \
-                  firefox-l10n-gn           firefox-l10n-lv     firefox-l10n-sl     firefox-l10n-el     firefox-l10n-gu-in \
-                  firefox-l10n-mk           firefox-l10n-son    firefox-l10n-en-ca  firefox-l10n-he     firefox-l10n-mr \
-                  firefox-l10n-sq"
-         kas build ./meta-browser/meta-firefox/kas/walnascar-latest-riscv-test.yml
-         mv build/tmp/deploy/images/star64/firefox-test-image-star64.rootfs-*.wic.gz /yocto/test-images/walnascar-riscv-latest.wic.gz
-         mv build/tmp/deploy/images/star64/firefox-test-image-star64.rootfs-*.wic.bmap /yocto/test-images/walnascar-riscv-latest.wic.bmap
+         # clone the test repo
+         git clone $GITHUB_SERVER_URL/$GITHUB_REPOSITORY_OWNER/meta-firefox-test
+         ./meta-firefox-test/scripts/build.sh walnascar riscv latest
+  test-walnascar-riscv-latest:
+    runs-on: [self-hosted, desktop]
+    needs: build-walnascar-riscv-latest
+    steps:
+      - run: |
+         cd /yocto/walnascar
+         ./meta-firefox-test/scripts/test.sh walnascar riscv latest
+      - uses: dorny/test-reporter@v1
+        if: always()
+        with:
+          path: meta-firefox/test-results/*.xml
+          reporter: java-junit
+          name: Test Results - walnascar risc-v latest
+          working-directory: /yocto/walnascar/meta-browser
