firefox: remove meta-rust support
When the Rust version in oe-core is too old to compile Firefox, meta-lts-mixins
should be used. meta-rust uses a different target name scheme than the other layers,
so it adds some extra complexity to the recipes, which ultimately isn't required
now that the mixins layers have full support for Firefox.

--- a/meta-firefox/conf/layer.conf
+++ b/meta-firefox/conf/layer.conf
@@ -117,11 +117,6 @@ BBFILE_PRIORITY_firefox-browser-layer = "7"
 LAYERVERSION_firefox-browser-layer = "2"
 LAYERSERIES_COMPAT_firefox-browser-layer = "kirkstone scarthgap styhead walnascar"
 
-LAYERDEPENDS_firefox-browser-layer = "clang-layer core openembedded-layer"
-
-# Don't enforce the Rust layer dependency for now, as there are multiple
-# actively maintained Rust-providing layers (e.g. Kirkstone has at least 2:
-# meta-rust and meta-lts-mixins).
-
-# LAYERDEPENDS_firefox-browser-layer:append = '${@" rust-layer " if "kirkstone" in d.getVar("LAYERSERIES_CORENAMES") else ""}'
-# LAYERDEPENDS_firefox-browser-layer:append = '${@" scarthgap-rust-mixin " if "scarthgap" in d.getVar("LAYERSERIES_CORENAMES") else ""}'
+LAYERDEPENDS_firefox-browser-layer = "clang-layer core openembedded-layer \
+                                      ${@bb.utils.contains('LAYERSERIES_CORENAMES', 'kirkstone', 'lts-rust-mixin', '', d)} \
+                                      ${@bb.utils.contains('LAYERSERIES_CORENAMES', 'scarthgap', 'scarthgap-rust-mixin', '', d)}"
