firefox: enable pull-request trigger for workflow

--- a/.github/workflows/yocto_matrix.yml
+++ b/.github/workflows/yocto_matrix.yml
@@ -1,6 +1,21 @@
 name: Firefox build- and smoke-test
 
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+    inputs:
+      repository:
+        description: 'Repository to clone for the workflow'
+        required: true
+        default: 'OSSystems'
+      branch:
+        description: 'Branch to checkout for the workflow'
+        required: true
+        default: 'master'
+  pull_request:
+    branches:
+      - master
+    paths:
+      - 'meta-firefox/**'
 
 permissions:
   contents: read
@@ -30,8 +45,15 @@ jobs:
          mkdir -p /yocto/${{ matrix.yocto_version }}
          cd /yocto/${{ matrix.yocto_version }}
          rm -rf meta-browser meta-firefox-test
-         git clone $GITHUB_SERVER_URL/$GITHUB_REPOSITORY
-         git -C meta-browser checkout $GITHUB_HEAD_REF
+         if [ "${{ github.event_name }}" = "pull_request" ]; then
+             GH_URL="$GITHUB_SERVER_URL/$GITHUB_REPOSITORY"
+             GH_REV="$GITHUB_HEAD_REF"
+         else
+             GH_URL="$GITHUB_SERVER_URL/${{ github.event.inputs.repository }}/meta-browser"
+             GH_REV="${{ github.event.inputs.branch }}"
+         fi
+         git clone $GH_URL
+         git -C meta-browser checkout $GH_REV
          # clone the test repo
          git clone https://github.com/OldManYellsAtCloud/meta-firefox-test.git
          ./meta-firefox-test/scripts/build.sh ${{ matrix.yocto_version}} ${{ matrix.arch }} ${{ matrix.ff_version }} ${{ matrix.libc_flavour}}
